--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.0.7 
   firebase_storage: ^12.1.0 
   permission_handler: ^11.3.0
+  provider: ^6.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
