--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_storage: ^12.1.0 
   permission_handler: ^11.3.0
   provider: ^6.1.5
+  google_sign_in: ^7.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -66,8 +67,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/ 
-    - assets/icons/
+    - assets/images/Group1.png
+    - assets/icons/Group1.svg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
